syntax="proto3";

package msg;


message TestMsg{   
    string  name = 1;
    string  nick_name = 2;
    string  phone  = 3;

}

message Login{   
    int32  uid = 1;
}


message Payload{   
    string  key = 1;
    bytes  pack = 2;
}

message RpcPackage{   
    string  key = 1;
    bytes payload = 2;
}


